--- a/index.html
+++ b/index.html
@@ -71,7 +71,7 @@
             <!--Soundboard ends-->
 
             <footer>
-                <p>Created by <a href="https://larlar.co.uk/" target="_blank">Larlar</a></p>
+                <p>Created by <a href="https://github.com/Larlar03/gc-soundboard" target="_blank">Lana Gordon</a></p>
             </footer>
         </div>
         <!--Background image div-->
