Changed some styling

--- a/index.html
+++ b/index.html
@@ -12,12 +12,6 @@
     <!--Stylesheet-->
     <link rel="stylesheet" href="styles/style.css" />
 
-    <!--Font-->
-    <link
-      href="https://fonts.googleapis.com/css2?family=Work+Sans:wght@400;700;800&display=swap"
-      rel="stylesheet"
-    />
-
     <!--Bootstrap -->
     <link
       rel="stylesheet"
@@ -35,7 +29,10 @@
       <div id="left">
         <header>
           <h1>The Gemma Collins Soundboard</h1>
-          <p>Press the letter on your keyboard to hear a GC quote.</p>
+          <p>
+            Press the letter on your keyboard or click a button to hear a GC
+            quote.
+          </p>
         </header>
 
         <!--Soundboard begins-->
