--- a/index.html
+++ b/index.html
@@ -26,67 +26,73 @@
 
   <body>
     <main>
-      <div id="left">
-        <header>
-          <h1>The Gemma Collins Soundboard</h1>
+      <header>
+        <div class="header-text">
+          <h1>
+            The <br />
+            <span class="name">Gemma Collins</span> <br />
+            Soundboard
+          </h1>
           <p>
             Press the letter on your keyboard or click a button to hear a GC
             quote.
           </p>
-        </header>
-
-        <!--Soundboard begins-->
-        <div class="soundboard">
-          <div class="key button" data-key="65">
-            <h2>A</h2>
-            <p>Claustrophobic</p>
-          </div>
-          <div class="key" data-key="83">
-            <h2>S</h2>
-            <p>Not True</p>
-          </div>
-          <div class="key" data-key="68">
-            <h2>D</h2>
-            <p>Devo'd</p>
-          </div>
-          <div class="key" data-key="70">
-            <h2>F</h2>
-            <p>Electric</p>
-          </div>
-          <div class="key" data-key="71">
-            <h2>G</h2>
-            <p>Fire Exit</p>
-          </div>
-          <div class="key" data-key="72">
-            <h2>H</h2>
-            <p>Frazzled</p>
-          </div>
-          <div class="key" data-key="74">
-            <h2>J</h2>
-            <p>Gamed Out</p>
-          </div>
-          <div class="key" data-key="75">
-            <h2>K</h2>
-            <p>I've Got Money</p>
-          </div>
-          <div class="key" data-key="76">
-            <h2>L</h2>
-            <p>Piss-Take</p>
-          </div>
         </div>
-        <!--Soundboard ends-->
 
-        <footer>
-          <p>
-            Created by
-            <a href="https://github.com/Larlar03/gc-soundboard" target="_blank"
-              >Lana Gordon</a
-            >
-          </p>
-        </footer>
+        <div class="header-img">
+          <img src="img/gc-icon.png" alt="Gemma Collins Icon" />
+        </div>
+      </header>
+
+      <!--Soundboard begins-->
+      <div class="soundboard">
+        <div class="key button" data-key="65">
+          <h2>A</h2>
+          <p>Claustrophobic</p>
+        </div>
+        <div class="key" data-key="83">
+          <h2>S</h2>
+          <p>Not True</p>
+        </div>
+        <div class="key" data-key="68">
+          <h2>D</h2>
+          <p>Devo'd</p>
+        </div>
+        <div class="key" data-key="70">
+          <h2>F</h2>
+          <p>Electric</p>
+        </div>
+        <div class="key" data-key="71">
+          <h2>G</h2>
+          <p>Fire Exit</p>
+        </div>
+        <div class="key" data-key="72">
+          <h2>H</h2>
+          <p>Frazzled</p>
+        </div>
+        <div class="key" data-key="74">
+          <h2>J</h2>
+          <p>Gamed Out</p>
+        </div>
+        <div class="key" data-key="75">
+          <h2>K</h2>
+          <p>I've Got Money</p>
+        </div>
+        <div class="key" data-key="76">
+          <h2>L</h2>
+          <p>Piss-Take</p>
+        </div>
       </div>
-      <!--Background image div-->
-      <div id="right"></div>
+      <!--Soundboard ends-->
+
+      <footer>
+        <p>
+          Created by
+          <a href="https://github.com/Larlar03/gc-soundboard" target="_blank"
+            >Lana Gordon</a
+          >
+        </p>
+      </footer>
     </main>
 
     <!--Audio with keyboard data and sound clips assigned -->
