Added explicit language warning to header

--- a/index.html
+++ b/index.html
@@ -37,6 +37,7 @@
             Press the letter on your keyboard or click a button to hear a GC
             quote.
           </p>
+          <p class="warning">Warning: explicit language</p>
         </div>
 
         <div class="header-img">
